2005-05-16  Not Zed  <NotZed@Ximian.com>

	* moved e-error to e-util

	* Makefile.am: renamed error xml file & u18n stuff.

2005-05-16  Srinivasa Ragavan <sragavan@novell.com>

	* gui/components/GNOME_Evolution_Addressbook.server.in.in: Added tooltips
	
2005-05-12  Ulrich Neumann  <uli@myuli.com>
 
 	* gui/contact-editor/contact-editor.glade:
	Fixed wrong xalign of Zip/Postal Code. This
 	was very ugly in languages like german, dutch etc.
 
2005-05-11  Srinivasa Ragavan <sragavan@novell.com>
	* gui/widgets//e-minicard.c: (add_field), (remodel):
	Fixed the bug 209416. It shows a different view for contact lists
	
	
2005-05-09  Sushma Rai  <rsushma@novell.com>

	* gui/widgets/eab-gui-util.c (eab_contact_save)(eab_contact_list_save):
	Finding if multiple contacts or a single contact has been selected for
	saving, and storing it in SaveAsInfo structure.
	(save_it): Depending on selected contacts, forming a part of error
	message. 

	* addressbook-errors.xml: Changed the save-error message, to read
	string contact/contacts.
	Fixes #261969.

2005-05-09  Sushma Rai  <rsushma@novell.com>

	* gui/widgets/e-addressbook-view.c (eab_view_delete_selection): Checking
	if single or multiple contacts/contact lists are being deleted. Also
	finding the name, if the single contact/contact list is being deleted. 

	* gui/contact-editor/eab-editor.c (eab_editor_confirm_delete): Forming
	the display messages based on the contact/contact list and number of
	contacts/contact lists being deleted. 
	Fixes #222599

2005-05-06  Chenthill Palanisamy  <pchenthill@novell.com>
	
	Fixes #301459
	* gui/contact-list-editor/contact-list-editor.glade: Corrected 
	the spelling for addresses and address.

2005-05-06  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #272464
	* addressbook-errors.xml:
	* addressbook-errors.xml.h: Changed the primary and secondary
	to make it more clear.

2005-04-28  Ross Burton  <ross@burtonini.com>

	* gui/widgets/e-addressbook-view.c: