@@ -1,3 +1,10 @@
+2005-06-09  Sushma Rai  <rsushma@novell.com>
+
+	* gui/widgets/e-addressbook-view.c: 
+	Patch submitted by Hans Petter Jansson  <hpj@novell.com>, for
+	Removing the references to the old wombat master category list, 
+	replacing them with e-categories from libedataserver.
+
 2005-05-16  Not Zed  <NotZed@Ximian.com>
 
 	* moved e-error to e-util
